--- a/components/app-layout/app-layout.styles.scss
+++ b/components/app-layout/app-layout.styles.scss
@@ -1,15 +1,5 @@
 @import "../../assets/scss/main.scss";
 
-body {
-  background-image:
-    radial-gradient($primary 1px, #fdfdfd 1px),
-    radial-gradient($primary 1px, #fdfdfd 1px);
-  background-position: 0 0, 25px 25px;
-  background-size: 50px 50px;
-  padding: 0;
-  margin: 0;
-}
-
 .app-layout {
   display: grid;
   height: 100vh;
@@ -23,15 +13,10 @@ body {
     width: 100%;
   }
 
-  @media (min-width: 768px) {
-    main {
+  @media (min-width: 520px) {
+    .main {
       height: 90vh;
-      width: 768px;
+      width: 520px;
     }
   }
-}
-
-
-* {
-  box-sizing: border-box;
 }
